line overflow fix

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -196,7 +196,7 @@ header{
 		.name{
 			@extend %bpg_bc;
 			font-size: 2em;
-			height: px2em(20px,20px); // 20 px + 10 px  = 30px 
+			//height: px2em(20px,20px); // 20 px + 10 px  = 30px // xazebs ertmanetze ajens es
 			padding: 0 0 px2em(10px,20px);
 		}
 		.position{
